fixed layout issues

--- a/styles/main-lg.css
+++ b/styles/main-lg.css
@@ -31,9 +31,9 @@
 @media screen and (min-width: 1000px) {
   .hero {
     flex-direction: row;
-    text-align: left;
     justify-content: center;
     align-items: center;
+    height: 80vh;
     gap: 5rem;
     padding: 0 40px;
   }
