--- a/styles/main.css
+++ b/styles/main.css
@@ -123,14 +123,14 @@ nav {
   align-items: center;
   justify-content: center;
   text-align: center;
-  height: 80vh;
+  height: 100vh;
   gap: 25px;
   margin-top: 50px;
-  padding: 80px 10px 30px 10px;
+  padding: 80px 10px 40px 10px;
 }
 
 .heroText p {
-  margin-top: 10px;
+  margin-top: 8px;
 }
 
 .hero img,
@@ -143,9 +143,7 @@ nav {
 
 /* ===== Break Section ===== */
 .breakwrapper {
-  background: #e9dccb; /* soft beige tone for separation */
-  width: 100%;
-  height: 200px;
+  background: #e9dccb;
 }
 
 .breakSection {
@@ -265,6 +263,7 @@ footer .container {
   align-items: center;
   justify-content: center;
   flex-direction: column;
+  text-align: center;
   gap: 10px;
 }
 
